# imessage-mcp

./: AGENTS.md  README.md  pyproject.toml
.cursor/rules/: mcp-server.mdc
docs/superpowers/plans/: 2026-05-02-write-like-you-skill.md
docs/superpowers/specs/: 2026-05-02-write-like-you-skill-design.md
src/imessage_mcp/: __init__.py  __main__.py  contacts.py  imessage.py  server.py
tests/: test_contacts.py  test_imessage.py  test_server.py
